--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ pygmentCodeFences = true
   logo = "question-logo.png"
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
-  commit = true
+  commit = false
   rss = true
   comments = true
   #gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
